EMS.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ems-a
  namespace: edge-apps
spec:
  selector:
    matchLabels:
      app: ems
  template:
    metadata:
      labels:
        app: ems
    spec:
      nodeSelector:
        node-type: edge

      topologySpreadConstraints:
        - maxSkew: 1 
          topologyKey: "kubernetes.io/hostname" 
          whenUnsatisfiable: ScheduleAnyway 
          labelSelector:
            matchLabels:
              app: ems

      containers:
        - name: ems
          image: ghcr.io/patiphan-pluem/edge-app:v10
          imagePullPolicy: IfNotPresent
          command: ["python", "ems_simulator.py"]
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
