EnvoyProxy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: timescaledb-fqdn-entry
  namespace: edge-apps
spec:
  hosts:
  - timescaledb-service.edge-apps.svc.cluster.local 
  location: MESH_INTERNAL
  ports:
  - number: 5432
    name: tcp-postgresql
    protocol: TCP
  resolution: STATIC
  endpoints:
  - address: 10.106.239.5
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: timescaledb-short-entry
  namespace: edge-apps
spec:
  hosts:
  - timescaledb-service 
  location: MESH_INTERNAL
  ports:
  - number: 5432
    name: tcp-postgresql-short
    protocol: TCP
  resolution: STATIC
  endpoints:
  - address: 10.106.239.5
