CiliumProxy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: pdc-to-timescaledb-dns-visibility
  namespace: edge-apps
spec:
  endpointSelector:
    matchLabels:
      app: pdc # เจาะจงไปที่ตัว PDC
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchName: "timescaledb-service.edge-apps.svc.cluster.local"
    - toEndpoints:
        - matchLabels:
            app: timescaledb # อนุญาตให้คุยกับ DB หลังจาก Resolve ได้
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
